# gamut-volume-python

./: .gitignore  README.md  Reference_sRGB_IEC_61966-2-1_gamut_envelope.txt  Reference_sRGB_IEC_61966-2.1_Synthetic_XYZ_surface10.txt  Reference_sRGB_IEC_61966-2.1_gamut_envelope.txt  cgats.py  get_volume.py  intersection_volume.py  main.ipynb  make_gamut_envelope.py  make_tesselation.py  plot_rings.py  pyproject.toml  requirements.txt  visualisation.py
