[project]
name = "gamut-volume-python"
version = "1.0.1"
description = "Gamut volume calculation and visualisation in Python"
authors = [
    {name = "mooonseeker",email = "zhushengtao1996@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy",
    "colour-science",
    "matplotlib"
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
